# zero-trust-microservice-engine

./: Cargo.toml  README.md  package.json  tailwind.config.js  tsconfig.json
config/: config.toml
ebpf/: xdp_filter.bpf.c
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/attestation/: mod.rs
src-tauri/src/commands/: alerts.rs  attacks.rs  attestation.rs  audit.rs  config.rs  dashboard.rs  identity.rs  mod.rs  policy.rs  wireguard.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/ebpf/: mod.rs
src-tauri/src/identity/: mod.rs
src-tauri/src/policy/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/wireguard/: mod.rs
src/lib/: api.ts
src/routes/: +layout.svelte  +page.svelte
