[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Security Engineering Team"]
license = "MIT"
description = "Zero-Trust Network Micro-Segmentation Engine"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Cryptography
ring = "0.17"
aes-gcm = "0.10"
rsa = "0.9"
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"
hex = "0.4"

# JWT & X.509
jsonwebtoken = "9.2"
x509-parser = "0.15"
rcgen = "0.12"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# IP/Network utilities
ipnetwork = "0.20"

# HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Validation
validator = { version = "0.16", features = ["derive"] }
