[package]
name = "zerotrust-mesh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"

# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ring.workspace = true
aes-gcm.workspace = true
rsa.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
x509-parser.workspace = true
rcgen.workspace = true
rusqlite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
ipnetwork.workspace = true
reqwest.workspace = true
validator.workspace = true

# Additional dependencies
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "zerotrust_mesh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "zerotrust-mesh"
path = "src/main.rs"
